--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pr</title>
+    <link rel="stylesheet" href="/Style/css/main.css">
+    <script src="/Script/JS/main.js"></script>
+    <title>Mouaad ELBarrik</title>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
