redirect the the home page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,12 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Style/css/main.css">
-    <script src="/Script/JS/main.js"></script>
+    <script defer src="/Script/JS/main.js"></script>
+    <script defer src="/Script/JS/textWrite.js"></script>
     <title>Mouaad ELBarrik</title>
 </head>
 
 <body>
+    <header>
+        <div class="name-role">
+            <span class="welcom-msg">HI 👋 I'm </span>
+            <span class="name-role-text">Mouaad ELBARRIK</span>
+        </div>
 
+    </header>
 </body>
 
 </html>
