--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Style/css/main.css">
-    <script defer src="/Script/JS/main.js"></script>
-    <script defer src="/Script/JS/textWrite.js"></script>
+    <link rel="stylesheet" href="./Style/css/main.css">
+    <script defer src="./Script/JS/main.js"></script>
+    <script defer src="./Script/JS/textWrite.js"></script>
     <title>Mouaad ELBarrik</title>
 </head>
 
