half of the home section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             <span class="welcom-msg">HI 👋 I'm </span>
             <span class="name-role-text">Mouaad ELBARRIK</span>
         </div>
+        <button class="contact-me-1">Contact Me</button>
+        <div class="socialHolder">
+            <div class="socialIconHolder">
+                <img src="./img/github.icon.png" href="https://github.com/Mouaadgames" class=" socialIcon">
+                <img src="./img/linkedin.icon.png" href="https://www.linkedin.com/in/mouaad-elbarrik-4b9752266/"
+                    class="socialIcon">
+                <img src="./img/instagram.icon.png" href="https://www.instagram.com/mouaadgamesmg/" class=" socialIcon">
+            </div>
+        </div>
+
 
     </header>
 </body>
