all the scss structchr is set

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <img src="./img/BG.png" class="first-bg">
         <div class="name-role">
             <span class="welcom-msg">HI 👋 I'm </span>
             <span class="name-role-text">Mouaad ELBARRIK</span>
@@ -20,14 +21,18 @@
         <button class="contact-me-1">Contact Me</button>
         <div class="socialHolder">
             <div class="socialIconHolder">
-                <img src="./img/github.icon.png" href="https://github.com/Mouaadgames" class=" socialIcon">
-                <img src="./img/linkedin.icon.png" href="https://www.linkedin.com/in/mouaad-elbarrik-4b9752266/"
-                    class="socialIcon">
-                <img src="./img/instagram.icon.png" href="https://www.instagram.com/mouaadgamesmg/" class=" socialIcon">
+                <a href="https://github.com/Mouaadgames"><img src="./img/github.icon.png" class=" socialIcon"></a>
+                <a href="https://www.linkedin.com/in/mouaad-elbarrik-4b9752266/"><img src="./img/linkedin.icon.png"
+                        class="socialIcon"> </a>
+                <a href="https://www.instagram.com/mouaadgamesmg/"><img src="./img/instagram.icon.png"
+                        class=" socialIcon"> </a>
             </div>
         </div>
-
-
+        <div class="goDown">
+            <div>See Project</div>
+            <img src="./img/goDown.icon.png" alt="">
+        </div>
+        <img class="scrole" src="./img/mouse.png" alt="">
     </header>
 </body>
 
