more stuff added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,92 @@
         </div>
         <img class="scrole" src="./img/mouse.png" alt="">
     </header>
+    <div class="about">
+        <div class="title">About Me</div>
+        <p class="about-me">Hi there! I'm Mouaad ELBarrik, a Full Stack Developer with a passion for creating innovative
+            and dynamic web applications.
+            My approach to development is collaborative, transparent, and focused on delivering high-quality work</p>
+        <button class="resume-button">Resume</button>
+    </div>
+    <div class="my-skills-container">
+        <h3 class="my-skills-h3">My Skills</h3>
+        <h2 class="what-IDo">What I Do</h2>
+        <div class="my-skills">
+            <div class="skill-card">
+                <div class="title-section">
+                    <img src="./img/front-end.icon.png" alt="front end icon" class="title-icon">
+                    <h3 class="section-title">Front End</h3>
+                </div>
+                <div class="skills-place">
+                    <div class="skill-row">
+                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
+                        <span>CSS</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
+                        <span>CSS</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
+                        <span>CSS</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
+                        <span>CSS</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
+                        <span>CSS</span>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-card">
+                <div class="title-section">
+                    <img src="./img/back-end.icon.png" alt="back end icon" class="title-icon">
+                    <h3 class="section-title">Back End</h3>
+                </div>
+                <div class="skills-place">
+                    <div class="skill-row">
+                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
+                        <span>Mongo DB</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
+                        <span>Mongo DB</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
+                        <span>Mongo DB</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
+                        <span>Mongo DB</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
+                        <span>Mongo DB</span>
+                    </div>
+
+                </div>
+            </div>
+            <div class="skill-card">
+                <div class="title-section">
+                    <img src="./img/tools.icon.png" alt="other icon" class="title-icon">
+                    <h3 class="section-title">Other</h3>
+                </div>
+                <div class="skills-place">
+                    <div class="skill-row">
+                        <img src="./img/Git.icon.png" alt="git icon" class="skill-icon">
+                        <span>Git</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/Git.icon.png" alt="git icon" class="skill-icon">
+                        <span>Git</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
