--- a/index.html
+++ b/index.html
@@ -52,24 +52,31 @@
                 </div>
                 <div class="skills-place">
                     <div class="skill-row">
-                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
-                        <span>CSS</span>
+                        <div class="skill-icon">
+                            <img src="./img/CSS.icon.png" alt="CSS icon" class="css-icon">
+                            <img src="./img/html icon.png" alt="CSS icon" class="html-icon">
+                        </div>
+                        <span>HTML / CSS</span>
                     </div>
                     <div class="skill-row">
-                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
-                        <span>CSS</span>
+                        <img src="./img/javascript.icon.png" alt="CSS icon">
+                        <span>JavaScript</span>
                     </div>
                     <div class="skill-row">
-                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
-                        <span>CSS</span>
+                        <img src="./img/jQuery.icon.png" alt="jQuery icon">
+                        <span>jQuery</span>
                     </div>
                     <div class="skill-row">
-                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
-                        <span>CSS</span>
+                        <img src="./img/scss.icon.png" alt="CSS icon">
+                        <span>SCSS</span>
                     </div>
                     <div class="skill-row">
-                        <img src="./img/CSS.icon.png" alt="CSS icon" class="skill-icon">
-                        <span>CSS</span>
+                        <img src="./img/react.icon.svg" alt="CSS icon">
+                        <span>React</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/react-native.icon.svg" alt="CSS icon" class="react-native">
+                        <span>React Native</span>
                     </div>
                 </div>
             </div>
@@ -80,24 +87,24 @@
                 </div>
                 <div class="skills-place">
                     <div class="skill-row">
-                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
+                        <img src="./img/nodejs-icon.svg" alt="mongoDB">
+                        <span>Node JS</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/Typescript.icon.svg.png" alt="mongoDB">
+                        <span>TypeScript</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/GraphQL.icon.png" alt="mongoDB">
+                        <span>Graph QL</span>
+                    </div>
+                    <div class="skill-row">
+                        <img src="./img/mongodb.icon.png" alt="mongoDB">
                         <span>Mongo DB</span>
                     </div>
                     <div class="skill-row">
-                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
-                        <span>Mongo DB</span>
-                    </div>
-                    <div class="skill-row">
-                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
-                        <span>Mongo DB</span>
-                    </div>
-                    <div class="skill-row">
-                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
-                        <span>Mongo DB</span>
-                    </div>
-                    <div class="skill-row">
-                        <img src="./img/mongodb.icon.png" alt="mongoDB" class="skill-icon">
-                        <span>Mongo DB</span>
+                        <img src="./img/mySQL.iocn.png" alt="mongoDB" class="my-sql">
+                        <span>My SQL</span>
                     </div>
 
                 </div>
@@ -109,12 +116,12 @@
                 </div>
                 <div class="skills-place">
                     <div class="skill-row">
-                        <img src="./img/Git.icon.png" alt="git icon" class="skill-icon">
+                        <img src="./img/Git.icon.png" alt="git icon">
                         <span>Git</span>
                     </div>
                     <div class="skill-row">
-                        <img src="./img/Git.icon.png" alt="git icon" class="skill-icon">
-                        <span>Git</span>
+                        <img src="./img/Git.icon.png" alt="git icon">
+                        <span>VS Code</span>
                     </div>
                 </div>
             </div>
