today finish touch

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <span>Git</span>
                     </div>
                     <div class="skill-row">
-                        <img src="./img/Git.icon.png" alt="git icon">
+                        <img src="./img/Visual_Studio_Code.icon.png" alt="git icon">
                         <span>VS Code</span>
                     </div>
                 </div>
